--- a/src/Flask/templates/html/upload.html
+++ b/src/Flask/templates/html/upload.html
@@ -81,7 +81,7 @@
             <div class="sidebar">
                 <!-- 主菜单 -->
                 <div class="main-menu">
-                    <a href="index.html" class="color-home" data-target="home-submenu">Home</a>
+                    <a href='/' class="color-home" data-target="home-submenu">Home</a>
                     <a href="#" class="color-gallery" data-target="gallery-submenu">Gallery  <i class="fa fa-angle-right" style="font-size:30px;margin-left: 280px"></i></a>
                     <a href="#" class="color-watchlist" data-target="watchlist-submenu">Watch List</a>
                     <a href="#" class="color-help" data-target="help-submenu">Help <i class="fa fa-angle-right" style="font-size:30px;margin-left: 300px"></i></a>
@@ -168,7 +168,7 @@
 
             <div id="mcmenu">
                 <ul>
-                    <li  id="menu-home"><a href="index.html">Home</a></li>
+                    <li  id="menu-home"><a href="/">Home</a></li>
                     <li class="full-width" id="menu-gallery">
                         <span>Gallery &nbsp;<i class="fa fa-angle-down" style="font-size:30px"></i></span>
                         <div class="dropdown">
