--- a/src/Flask/templates/html/upload.html
+++ b/src/Flask/templates/html/upload.html
@@ -268,7 +268,7 @@
                     <div class="image-information-container">
                         <div class="image-header"><i class="fa fa-file-image-o" style="font-size:24px;color:#00467F "></i>&nbsp;&nbsp;&nbsp;Image Information</div>
                         <div class="image-box gray">
-                            <p class="box-title">File size</p>
+                            <p class="box-title" id="FileSize">File size</p>
                             <p class="box-content">4.5 MB</p>
                         </div>
                         <div class="image-box white">
