--- a/src/Flask/templates/html/upload.html
+++ b/src/Flask/templates/html/upload.html
@@ -268,16 +268,16 @@
                     <div class="image-information-container">
                         <div class="image-header"><i class="fa fa-file-image-o" style="font-size:24px;color:#00467F "></i>&nbsp;&nbsp;&nbsp;Image Information</div>
                         <div class="image-box gray">
-                            <p class="box-title" id="FileSize">File size</p>
-                            <p class="box-content"id="metadata-FileSize"></p>
+                            <p class="box-title">File Name</p>
+                            <p class="box-content" id="metadata-FileName"></p>
                         </div>
                         <div class="image-box white">
                             <p class="box-title">File type</p>
                             <p class="box-content" id="metadata-FileType"></p>
                         </div>
                         <div class="image-box gray">
-                            <p class="box-title">MIME type</p>
-                            <p class="box-content" id="metadata-MIMEType"></p>
+                            <p class="box-title" id="FileSize">File size</p>
+                            <p class="box-content"id="metadata-FileSize"></p>
                         </div>
                         <div class="image-box white">
                             <p class="box-title">Image size</p>
