--- a/src/Flask/templates/html/upload.html
+++ b/src/Flask/templates/html/upload.html
@@ -258,7 +258,7 @@
                         <p>Drag and drop an JPEG image here! </p>
                         <p style="font-weight: normal;font-size: 0.9rem">Up to 5 MB, Your uploads are private</P>
                     </div>
-                    <input type="file" accept="image/*" required="" id="file-input">
+                    <input type="file" accept=".jpg,.jpeg" required="" id="file-input">
                 </form>
             </div>
         </div>
