--- a/src/Flask/templates/html/changepassword.html
+++ b/src/Flask/templates/html/changepassword.html
@@ -28,7 +28,7 @@
         <hr class="separator" />
         <div class="accordion-content">
             <div class="reset-password-form">
-                <form>
+                <form action="/change-password" method="post">
                     <div class="form-group">
                         <label for="email">Email address：</label>
                         <input type="email" id="email" name="email" required>
@@ -50,7 +50,7 @@
                         <input type="password" id="confirm-new-password" name="confirm-new-password" required>
                     </div>
                     <div class="form-submit">
-                        <button  type="submit" class="submit-button" onclick="change_password()">
+                        <button type="submit" class="submit-button" onclick="return change_password();">
                             <p>Submit</p>
                             <svg stroke-width="4" stroke="currentColor" viewBox="0 0 24 24" fill="none" class="h-6 w-6" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M14 5l7 7m0 0l-7 7m7-7H3" stroke-linejoin="round" stroke-linecap="round"></path>
