change the homepage

--- a/src/Flask/templates/html/index.html
+++ b/src/Flask/templates/html/index.html
@@ -270,7 +270,7 @@
                 <div class="picture-hub-content">
                     <h2 style="margin-bottom: -3px;padding-left: 20px;color: #FFFFFF">Image Hubs</h2>
                     <p style="padding-left: 20px;padding-right: 20px;color: #FFFFFF; font-size: 0.9rem">Explore Formats & Beyond. Discover Image Format Secrets, Master Photography. </p>
-                    <button type="button" class="find-out-more-button  find-out-more-button-color find-out-more-button-background-color">
+                    <button type="button" class="find-out-more-button  find-out-more-button-color find-out-more-button-background-color" id="FindImageHubs" onclick="GotoImageHubs(event)">
                         <span>Find out more</span>
                     </button>
                 </div>
@@ -520,8 +520,8 @@
                 <div class="top-question">
                     <br>
                     <p class="top-question-text1">Top questions</p>
-                    <p class="top-question-text2">How is carbon dioxide made</p>
-                    <p class="top-question-text2">What damage does carbon dioxide</p>
+                    <p class="top-question-text2">How to get metadata</p>
+                    <p class="top-question-text2">How to judge the credibility of an image</p>
                 </div>
             </div>
 
@@ -535,7 +535,7 @@
                     </div>
                     <div class="image-title">What is JPEG</div>
                     <div class="household-text">JPEG (Joint Photographic Experts Group) is a widely used image compression format. It reduces file size by removing some image details, making it ideal for photos on the internet.</div>
-                    <div class="household-button">Find out more &nbsp;<i class="fa fa-chevron-right" style="font-size:1.5vw"></i></div>
+                    <div class="household-button" onclick="WhatIsJpeg(event)">Find out more &nbsp;<i class="fa fa-chevron-right" style="font-size:1.5vw" ></i></div>
 
                 </div>
                 <div class="household">
@@ -545,7 +545,7 @@
                     <div class="image-title">Learn meta-data</div>
                     <div class="household-text">
                         Image metadata (EXIF, IPTC, XMP) essential for organization, copyright, content, vital for photographers and asset managers.</div>
-                    <div class="household-button">Find out more &nbsp;<i class="fa fa-chevron-right" style="font-size:1.5vw"></i></div>
+                    <div class="household-button" onclick="LearnMetaData(event)">Find out more &nbsp;<i class="fa fa-chevron-right" style="font-size:1.5vw"></i></div>
                 </div>
             </div>
         </div>
