jump to sign up from membership button

--- a/src/Flask/templates/html/index.html
+++ b/src/Flask/templates/html/index.html
@@ -589,7 +589,7 @@
                 <div class="bottom-register-content">
                     <h2 style="margin-bottom: -3px;padding-left: 20px;color: #FFFFFF">Membership Hubs</h2>
                     <p style="padding-left: 20px;padding-right: 20px;color: #FFFFFF; font-size: 0.9rem">Become a member to access premium content. Don't miss out on the privileges; join us today!. </p>
-                    <button type="button" class="find-out-more-button  find-out-more-button-color find-out-more-button-background-color">
+                    <button type="button" class="find-out-more-button  find-out-more-button-color find-out-more-button-background-color" onclick="BecomeMembership(event)">
                         <span>Join us now !</span>
                     </button>
                 </div>
