Add reset password function

--- a/src/Flask/templates/html/changepassword.html
+++ b/src/Flask/templates/html/changepassword.html
@@ -93,7 +93,7 @@
                     <div class="hidden reset-page" id="reset-page2">
                         <p>
                             The code to reset your password will be sent to the email address
-                            <span style="color: red;">80*****62@qq.com</span>. If you are not
+                            <span class="reset-page2-email" style="color: #C4362E"></span>. If you are not
                             familiar with this email address or do not have access to it, please
                             reach out to <a href="">Student Support Team</a> or <a href="">Staff Service Centre</a> to reset your password.
                         </p>
@@ -101,7 +101,7 @@
 
                     <div class="hidden reset-page" id="reset-page3">
                         <div class="reset-page3-title">
-                            <div class="red-text" style="margin-top: 10px;overflow: hidden;font-size: 1rem" >Your reset code has been sent to <span class="reset-page3-email" style="color: #C4362E">80*****62@qq.com</span></div>
+                            <div class="red-text" style="margin-top: 10px;overflow: hidden;font-size: 1rem" >Your reset code has been sent to <span class="reset-page3-email" style="color: #C4362E"></span></div>
                             <div class="grey-text" style="margin-top: 10px;overflow: hidden;font-size: 1rem">It is valid for <span >7:00 minutes</span>. Please click <span class="underline">here</span> to resend the code.</div>
                         </div>
                         <div class="verify-code-container">
