complete gallery page

--- a/src/Flask/templates/html/index.html
+++ b/src/Flask/templates/html/index.html
@@ -308,7 +308,7 @@
         </div>
         <div class="gallery-wrapper">
             <div class="gallery" id="gallery">
-                <div class="gallery-container">
+                <div class="gallery-container" >
                     <div class="photo-div">
                         <img src="/static/images/background_gallery.jpeg" alt="Description of the image">
                     </div>
@@ -552,7 +552,7 @@
     </div>
 
     <div class="exhibition-container">
-        <div class="exhibition-card">
+        <div class="exhibition-card" onclick="GotoGallery(event)">
             <div class="exhibition-top-section">
                 <div class="exhibition-border"></div>
                 <div class="exhibition-icons">
