--- a/src/Flask/templates/html/index.html
+++ b/src/Flask/templates/html/index.html
@@ -175,7 +175,7 @@
                         <div class="dropdown">
                             <div class="clm">
                                 <h3><i class="fa fa-photo" style="font-size:24px"></i>&nbsp;&nbsp;&nbsp;All Images</h3>
-                                <a href="#">Default</a>
+                                <a href="#" onclick="GotoGallery(event)">Default</a>
                                 <a href="#">Sort By Credibility</a>
                                 <a href="#">Sort By Publish Time</a>
                             </div>
