--- a/src/Flask/templates/html/upload.html
+++ b/src/Flask/templates/html/upload.html
@@ -95,8 +95,8 @@
                         <i class="fa fa-angle-left" style="font-size: 30px"></i> &nbsp;&nbsp;&nbsp;&nbsp;<span>GALLERY</span>
                     </div>
                     <div class="submenu-div2">
-                        <h3><i class="fa fa-photo" style="font-size:24px"></i>&nbsp;&nbsp;&nbsp;All Images</h3>
-                        <a href="#">Default</a>
+                        <h3 ><i class="fa fa-photo" style="font-size:24px"></i>&nbsp;&nbsp;&nbsp;All Images</h3>
+                        <a href="#" onclick="GotoGallery(event)">Default</a>
                         <a href="#">Sort By Credibility</a>
                         <a href="#">Sort By Publish Time</a>
                     </div>
@@ -111,7 +111,7 @@
                     </div>
                     <div class="submenu-div4">
                         <div style="width: 80%; height: 80%; display: flex;position: relative; left: 10%; top: 10%;background: #00467F">
-                            <a href="#"><img src="background_gallery.jpeg" style="width: 330px;height: 100%"/></a>
+                            <a href="#"><img src="/static/images/background_gallery.jpeg" style="width: 330px;height: 100%"/></a>
                         </div>
                     </div>
                 </div>
@@ -174,7 +174,7 @@
                         <div class="dropdown">
                             <div class="clm">
                                 <h3><i class="fa fa-photo" style="font-size:24px"></i>&nbsp;&nbsp;&nbsp;All Images</h3>
-                                <a href="#">Default</a>
+                                <a href="#" onclick="GotoGallery(event)">Default</a>
                                 <a href="#">Sort By Credibility</a>
                                 <a href="#">Sort By Publish Time</a>
                             </div>
@@ -188,7 +188,7 @@
                                 <a href="#">Sort By Publish Time</a>
                             </div>
                             <div class="clm background-gallery">
-                                <a href="#" ><img src="background_gallery.jpeg" style="width:280px"/></a>
+                                <a href="#" ><img src="/static/images/background_gallery.jpeg"style="width:280px"/></a>
                             </div>
                         </div>
                     </li>
