--- a/src/Flask/templates/html/gallery.html
+++ b/src/Flask/templates/html/gallery.html
@@ -19,7 +19,7 @@
                         <i class="fas fa-user-circle fa-3x"></i>
                     </div>
                     <div id="profile-container">
-                        <div class="profile-name">Aman</div>
+                        <div class="profile-name">{{ user_email }}</div>
                     </div>
                 </div>
 
