Add email verification code to forget password function.
Signed-off-by: Lingxiu Cai <u7588748@anu.edu.au>

--- a/src/Flask/templates/html/changepassword.html
+++ b/src/Flask/templates/html/changepassword.html
@@ -86,7 +86,7 @@
                     <div class="hidden reset-page" id="reset-page1">
                         <div class="centered-content">
                             <p>Please input your email address</p>
-                            <input type="email" placeholder="Your email address" id="reset-email-input">
+                            <input type="email" placeholder="Your email address" id="reset-email-input" required>
                         </div>
                     </div>
 
