Add resend email cool down and code valid time countdown to changepassword.html
Signed-off-by: Lingxiu Cai <u7588748@anu.edu.au>

--- a/src/Flask/templates/html/changepassword.html
+++ b/src/Flask/templates/html/changepassword.html
@@ -102,7 +102,7 @@
                     <div class="hidden reset-page" id="reset-page3">
                         <div class="reset-page3-title">
                             <div class="red-text" style="margin-top: 10px;overflow: hidden;font-size: 1rem" >Your reset code has been sent to <span class="reset-page3-email" style="color: #C4362E"></span></div>
-                            <div class="grey-text" style="margin-top: 10px;overflow: hidden;font-size: 1rem">It is valid for <span >7:00 minutes</span>. Please click <span class="underline">here</span> to resend the code.</div>
+                            <div class="grey-text" style="margin-top: 10px;overflow: hidden;font-size: 1rem">It is valid for <span id="countdown">10:00 minutes</span>. Please click <a href="#" id="resend-link" onclick="resendCode(event)">Resend</a> to resend the code.</div>
                         </div>
                         <div class="verify-code-container">
                             <input placeholder="" type="tel" maxlength="1" id="verify-input1">
