could download image and show image

--- a/src/Flask/templates/html/analysis.html
+++ b/src/Flask/templates/html/analysis.html
@@ -92,7 +92,7 @@
                             </div>
                             <span class="icon-introduce">Shrink</span>
                         </div>
-                        <div class="button">
+                        <div class="button" id="Download">
                             <div class="icon">
                                 <i class='fas fa-cloud-download-alt'></i>
                             </div>
@@ -120,7 +120,7 @@
                 <div class="show-result">
                     <div class="warpper-wait">
                         <div class="content"></div>
-                        <div class="number">5</div>
+                        <div class="number">3</div>
                     </div>
 
                     <div class="result">
@@ -185,17 +185,15 @@
                                     </svg>
                                     <div class="label">Manipulation</div>
                                 </div>
-
                             </div>
-
                         </div>
 
                         <div class="signal-result">
                             <div class="header">Credibility Signal </div>
                             <div class="chart" >
-                                <div class="signal" style="background: #C4362E">
+                                <div class="signal" id="signal1">
                                 </div>
-                                <div class="signal" style="background: #C4362E">
+                                <div class="signal" id="signal2">
                                 </div>
                             </div>
                         </div>
