Add error message to changepassword.html for both forget and change password
Signed-off-by: Lingxiu Cai <u7588748@anu.edu.au>

--- a/src/Flask/static/css/changepassword.css
+++ b/src/Flask/static/css/changepassword.css
@@ -257,6 +257,12 @@ body{
     font-size: 15px;
     display: none;
 }
+#error_forget{
+    color: #C4362E;
+    text-align: center;
+    font-size: 15px;
+    display: none;
+}
 .content2-container {
     width: 100%;
     height: 130%;
