--- a/src/Flask/templates/html/changepassword.html
+++ b/src/Flask/templates/html/changepassword.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Change Password</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/changepassword.css') }}">
     <script src="{{ url_for('static', filename='js/changepassword.js') }}"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
