--- a/src/Flask/templates/html/signup.html
+++ b/src/Flask/templates/html/signup.html
@@ -7,6 +7,7 @@
     <script src="{{ url_for('static', filename='js/signup.js') }}"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" href="{{ url_for('static', filename='images/CredibilitySiginal_v2.0.0.png') }}" type="image/png">
 </head>
 <body>
     <div class="top" style="background: #F2F2F2;;width: 100%;height: 80px">
