--- a/src/Flask/templates/html/userprofile.html
+++ b/src/Flask/templates/html/userprofile.html
@@ -9,6 +9,7 @@
     <script src="{{ url_for('static', filename='js/index.js') }}"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" href="{{ url_for('static', filename='images/CredibilitySiginal_v2.0.0.png') }}" type="image/png">
 </head>
 <body>
     <div class="top-title">
