--- a/src/Flask/static/css/userprofile.css
+++ b/src/Flask/static/css/userprofile.css
@@ -1,12 +1,14 @@
+body{
+    background-color: rgba(230, 249, 255, 0.3);
+}
 .user-profile-card {
     font-family: 'Arial', sans-serif;
     max-width: 1000px;
     min-height: 75vh;
     margin: 20px auto;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
-    overflow: hidden;
     height: 80%;
+    justify-content: center;
 }
 
 .profile-container {
@@ -101,18 +103,16 @@
 .image-containers {
     width: 100%;
     height: 70%;
+    justify-content: center;
 }
 
-.uploaded-images-container,
-.favorite-images-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+#uploaded-images-container,
+#favorite-images-container {
     gap: 10px;
     justify-content: center;
     margin-bottom: 20px;
     width: 100%;
-    min-height: 25vh;
-    max-height: 40vh;
+    height: 500px;
 }
 
 .image-containers h4 {
@@ -270,4 +270,56 @@
 
 .upload-btn:hover {
     background-color: #00467F;
+}
+
+.photo-gallery {
+    margin-top: 1%;
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 20px;
+    padding: 20px;
+    width: 95%;
+    overflow-x: auto;
+    overflow-y: hidden;
+}
+
+.photo {
+    flex: 0 0 auto;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px dashed #00467F;
+    position: relative;
+    transition: transform 0.5s ease;
+}
+
+.photo:hover {
+    transform: scale(1.1);
+    z-index: 9;
+}
+
+.photo img {
+    width: 95%;
+    height: 95%;
+    object-fit: cover;
+    transition: transform 0.5s ease;
+}
+
+.photo-indicators {
+    position: absolute;
+    bottom: 2vh;
+    right: 1vw;
+    display: flex;
+    transition: transform 0.5s ease;
+}
+
+.section {
+    padding-top: 20px;
+    margin-top: 10px;
+    background-color: #ffffff; /* 卡片的背景颜色 */
+    border-radius: 8px; /* 卡片的圆角 */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* 添加阴影效果，使卡片有浮起的感觉 */
+    width: 100%;
+    height: 500px; /* 卡片的最小高度，可根据需要调整 *//
 }
