fix: fix some typos

--- a/src/Flask/templates/html/index.html
+++ b/src/Flask/templates/html/index.html
@@ -244,7 +244,7 @@
     <div style="width: 100%; height: 400px; background-color: #00467F; background-image: url('/static/images/background.jpg'); background-size: cover; background-repeat: no-repeat; position: relative; z-index: 1">
         <div class="top-trust-indicate-container">
             <div style="height: 250px;width: 350px;display: flex;margin-left: 5px;margin-top: 15px;flex-direction: column; ">
-                <h1 style="padding-left: 20px;color: white;font-weight: bolder;margin: 10px 0 0 0">The Trust Indicate</h1>
+                <h1 style="padding-left: 20px;color: white;font-weight: bolder;margin: 10px 0 0 0">The Trust Indicator</h1>
                 <p style="padding-left: 20px;color: white;margin: 20px 0 0 0;line-height: 25px">This is student projectThis is student projectThis is student projectThis is student projectThis is student project</p>
                 <div style="flex-grow: 1; display: flex; flex-direction: column-reverse; align-items: center;">
                     <button type="button" title="register" class="register-button  register-button-color register-button-background-color" onclick="background_register(event)">
