Add feedback page and database.
Signed-off-by: Lingxiu Cai <u7588748@anu.edu.au>

--- a/src/Flask/templates/html/verification_email.html
+++ b/src/Flask/templates/html/verification_email.html
@@ -18,7 +18,7 @@
             padding: 20px;
         }
         .email-header {
-            background-color: #007bff;
+            background-color: #00467F;
             color: #ffffff;
             padding: 10px 20px;
             text-align: center;
@@ -36,15 +36,15 @@
             font-size: 24px;
             font-weight: bold;
             letter-spacing: 2px;
-            color: #007bff;
-            border: 1px dashed #007bff;
+            color: #009AC9;
+            border: 1px dashed #00467F;
             display: inline-block;; /* Changed from inline-block to block */
             margin: 20px auto; /* Updated margin to auto to center the block */
             width: fit-content; /* Fit the width of the content */
         }
         .email-footer {
             font-size: 12px;
-            color: #888888;
+            color: #009AC9;
             text-align: center;
             padding: 20px;
         }
